--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+/* General Style */
+section {
+  padding-top: 4vw !important;
+  padding-bottom: 4vh !important;
+}
 /* start header style */
 header {
   background-image: url("../../img/man.jpg");
@@ -5,9 +10,7 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
-  width: 100vw;
 }
-
 @media screen and (max-width: 767px) {
   header {
     height: 50vh;
